--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
-    "host": "localhost",
-    "user": "root",
-    "password": "",
-    "database": "quanlidatxe"
-}
+    "host": "Localhost",
+    "user": "giigmrqv_nghia",
+    "password": "Cbgetak!@#",
+    "database": "giigmrqv_appdatvexe"
+}   
