--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
     "host": "localhost",
-    "user": "giigmrqv_quangnghia",
-    "password": "Cbgetak123",
-    "database": "giigmrqv_datvexekhach"
-}
+    "user": "root",
+    "password": "",
+    "database": "quanlidatxe"
+}  
+ 
