--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,5 @@
     "host": "localhost",
     "user": "root",
     "password": "",
-    "database": "quanlidatxe"
+    "database": "datvexe"
 }  
- 
