--- a/routes/.cpanel.yml
+++ b/routes/.cpanel.yml
@@ -1,6 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/user/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp style.css $DEPLOYPATH
+    - export DEPLOYPATH=/home/giimrqv/git/
+    - /bin/cp * $DEPLOYPATH
